--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>Complex Sentences ミニゲーム</title>
+<title>Complex Sentences Minigames</title>
 <style>
 body { font-family: system-ui, sans-serif; padding:20px; max-width:800px; margin:auto; background:#f7f7f7; }
 h1 { margin-bottom:6px; }
@@ -18,14 +18,14 @@ button.choice.wrong { border-color:#c0392b; background:#fdecea; }
 </style>
 </head>
 <body>
-<h1>Complex Sentences ミニゲーム</h1>
+<h1>Complex Sentences Minigames</h1>
 <div class="card">
-<div class="clause"><b>主節:</b><span id="independentText"></span></div>
-<div class="clause"><b>従属節:</b><span id="dependentText"></span></div>
+<div class="clause"><b>Main Clause:</b><span id="independentText"></span></div>
+<div class="clause"><b>Dependent Clause:</b><span id="dependentText"></span></div>
 <div id="choices" class="choices"></div>
 <div class="controls">
-<button id="nextBtn">次へ</button>
-<div class="score">正答: <span id="correctCount">0</span> / <span id="totalCount">0</span></div>
+<button id="nextBtn">Next</button>
+<div class="score">Correct Ans: <span id="correctCount">0</span> / <span id="totalCount">0</span></div>
 </div>
 <div id="explain" class="explain"></div>
 </div>
