--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Complex Sentences Minigames</h1>
+
 <div class="card">
   <div class="clause"><b>Main Clause:</b> <span id="independentText"></span></div>
   <div class="clause"><b>Dependent Clause:</b> <span id="dependentText"></span></div>
@@ -17,6 +18,11 @@
   </div>
   <div id="explain" class="explain"></div>
 </div>
+
+<!-- BGMと効果音 -->
+<audio id="bgm" src="bgm.mp3" loop autoplay></audio>
+<audio id="correctSound" src="correct.mp3"></audio>
+<audio id="wrongSound" src="wrong.mp3"></audio>
 
 <script src="script.js"></script>
 </body>
